--- a/task3.ipynb
+++ b/task3.ipynb
@@ -2,8 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "specified-closer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np # linear algebra\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "indirect-fellow",
+   "id": "controlled-disposition",
    "metadata": {},
    "outputs": [],
    "source": []
